--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -24,3 +24,59 @@ html {
     font-family: 'Times New Roman', Times, serif;
     box-sizing: border-box;
 }
+
+.flim-category--title {
+    font-size: 5rem;
+    color: var(--main-color);
+    font-weight: 800;
+}
+
+.product__img-piont {
+    display: block;
+}
+
+.product__img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 1px -1px 1px rgb(63, 63, 63);
+
+}
+.product__piont {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    font-size: 1.8rem;
+    font-weight: 500;
+    background-color: var(--main-color);
+    color: var(--white-color);
+    padding: 8px 10px;
+    border-radius: 18px;
+    
+}
+.product__star {
+    width: 110px;
+    height: 20px;
+}
+
+.product__title {
+    font-size: 2.2rem;
+    color: var(--white-color);
+    font-weight: 800;
+    line-height: 1.3;
+    text-decoration: underline transparent;
+    cursor: pointer; 
+    margin-top: 10px;
+}
+
+.product__title:hover {
+    text-decoration: underline var(--white-color);
+}
+
+
